Chrome by default, refactors, and upgrades

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #firefox O chrome (chrome no funciona si no es localhost)
-navegador=firefox
+navegador=chrome
 
 #Timeout de las peticiones http
 timeout=20
